WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267117
[WebGPU] api/validation/compute_pipeline is failing
https://bugs.webkit.org/show_bug.cgi?id=267117
Summary
[WebGPU] api/validation/compute_pipeline is failing
Mike Wyrzykowski
Reported
2024-01-04 18:48:37 PST
[WebGPU] api/validation/compute_pipeline is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-04 18:48:54 PST
<
rdar://problem/120505688
>
Mike Wyrzykowski
Comment 2
2024-02-08 12:37:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24092
EWS
Comment 3
2024-02-08 19:34:34 PST
Committed
274339@main
(e05112cad720): <
https://commits.webkit.org/274339@main
> Reviewed commits have been landed. Closing PR #24092 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug