[WebGPU] api/validation/compute_pipeline is failing https://bugs.webkit.org/show_bug.cgi?id=267117 <radar://120505688>

Reviewed by Dan Glastonbury.

Add passing expectations for api,validation,compute_pipeline,*

Fix validation as zero-sized workgroups dispatch is not allowed.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/compute_pipeline-expected.txt:
* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::Device::createComputePipeline):

Canonical link: https://commits.webkit.org/274339@main